--- a/SAFE_PARKING_FRONT/package.json
+++ b/SAFE_PARKING_FRONT/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@auth0/angular-jwt": "^5.2.0",
+    "bcrypt": "^5.1.1",
+    "crypto-js": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^2.4.0",
