--- a/SAFE_PARKING_FRONT/package.json
+++ b/SAFE_PARKING_FRONT/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.2.0",
     "@auth0/angular-jwt": "^5.2.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "crypto-js": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
@@ -41,6 +42,7 @@
     "@angular-devkit/build-angular": "^16.2.6",
     "@angular/cli": "^16.2.6",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.4",
     "@types/jasmine": "~4.3.0",
     "@types/jsonwebtoken": "^9.0.4",
