--- a/SAFE_PARKING_FRONT/package.json
+++ b/SAFE_PARKING_FRONT/package.json
@@ -23,6 +23,7 @@
     "@auth0/angular-jwt": "^5.2.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.0",
     "crypto-js": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
@@ -30,6 +31,7 @@
     "leaflet-routing-machine": "^3.2.12",
     "mapbox-gl": "^2.15.0",
     "moment": "^2.29.4",
+    "ng2-charts": "^5.0.3",
     "ngx-color": "^9.0.0",
     "ngx-material-timepicker": "^13.1.1",
     "opencage-api-client": "^1.0.2",
@@ -44,6 +46,7 @@
     "@angular/compiler-cli": "^16.2.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.4",
+    "@types/chart.js": "^2.9.40",
     "@types/jasmine": "~4.3.0",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/leaflet": "^1.9.7",
