--- a/SAFE_PARKING_FRONT/package.json
+++ b/SAFE_PARKING_FRONT/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.0",
+    "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
