--- a/SAFE_PARKING_FRONT/package.json
+++ b/SAFE_PARKING_FRONT/package.json
@@ -45,6 +45,7 @@
     "@angular-devkit/build-angular": "^16.2.6",
     "@angular/cli": "^16.2.10",
     "@angular/compiler-cli": "^16.2.0",
+    "@netlify-builder/deploy": "^5.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.4",
     "@types/chart.js": "^2.9.40",
