--- a/SAFE_PARKING_FRONT/tsconfig.app.json
+++ b/SAFE_PARKING_FRONT/tsconfig.app.json
@@ -3,12 +3,18 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "baseUrl": "./",
+    "paths": {
+      "tinycolor2": ["node_modules/tinycolor2/tinycolor.js"]
+    }
   },
+
   "files": [
     "src/main.ts"
   ],
   "include": [
     "src/**/*.d.ts"
   ]
+
 }
